add unit test for library